Add context.xml hibernate.cfg.xml web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,5 +18,8 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
+<listener>
+		<listener-class>idv.david.listener.InitializerListener</listener-class>
+	</listener>
 
 </web-app>
