--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<!-- <version>5.6.9.Final</version> -->
+			 <version>5.6.9.Final</version>
 		</dependency>
 
 		<!-- hibernate-c3p0 連線池 -->                          <!--
@@ -95,7 +95,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
-			<!-- <version>5.6.9.Final</version> -->
+			<version>5.6.9.Final</version>
 		</dependency>
 
 		<!-- hibernate-proxool 連線池 -->                       <!--
@@ -103,7 +103,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-proxool</artifactId>
-			<!-- <version>5.6.9.Final</version> -->
+			 <version>5.6.9.Final</version> 
 		</dependency>
 
 
@@ -116,7 +116,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<!-- <version>4.0.1</version> -->
+		    <version>4.0.1</version>
 			<scope>provided</scope> <!-- ※provided只提供編譯，jar檔不匯出 -->
 		</dependency>
 
@@ -197,7 +197,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<!-- <version>8.0.29</version> -->                <!-- spring-boot(2.7.0)
+			 <version>8.0.29</version>                <!-- spring-boot(2.7.0)
 			已內建依賴8.029，但預設未下載 -->
 		</dependency>
 
