--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<resource-ref>
 		<description>DB Connection</description>
-		<res-ref-name>jdbc/TestDB2</res-ref-name>
+		<res-ref-name>jdbc/TestDB</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
@@ -18,8 +18,8 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
-<listener>
-		<listener-class>idv.david.listener.InitializerListener</listener-class>
+	<listener>
+		<listener-class>com.woof.listener.InitializerListener</listener-class>
 	</listener>
 
 </web-app>
