add ClassTypeServlet & add jstl

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
 			<version>5.6.15.Final</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->
+		<dependency>
+			<groupId>javax.servlet.jsp.jstl</groupId>
+			<artifactId>jstl-api</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
 		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
 		<!-- 
 		<dependency>
