--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,4 +22,13 @@
 		<listener-class>com.woof.listener.InitializerListener</listener-class>
 	</listener>
 
+
+	<!-- <filter>
+        <filter-name>SessionInViewFilter</filter-name>
+        <filter-class>com.woof.filter.OpenSessionInViewFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SessionInViewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping> -->
 </web-app>
