--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,17 @@
 			<version>4.2.1</version>
 		</dependency>
 
+
+		<!-- redis -->
+		<!-- ========================================================================================== -->
+	
+		<dependency>
+   			 <groupId>redis.clients</groupId>
+    		 <artifactId>jedis</artifactId>
+  			 <version>2.9.0</version>
+		</dependency>
+	
+	
 	</dependencies>
 
 	<build>
