--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,13 @@
 	version="4.0">
 	<display-name>Woof</display-name>
 
-<!-- 	JDBC連線池 -->
-<!-- 	<resource-ref> -->
-<!-- 		<description>DB Connection</description> -->
-<!-- 		<res-ref-name>jdbc/TestDB</res-ref-name> -->
-<!-- 		<res-type>javax.sql.DataSource</res-type> -->
-<!-- 		<res-auth>Container</res-auth> -->
-<!-- 	</resource-ref> -->
+	<!-- JDBC連線池 -->
+	<!-- <resource-ref> -->
+	<!-- <description>DB Connection</description> -->
+	<!-- <res-ref-name>jdbc/TestDB</res-ref-name> -->
+	<!-- <res-type>javax.sql.DataSource</res-type> -->
+	<!-- <res-auth>Container</res-auth> -->
+	<!-- </resource-ref> -->
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
@@ -22,6 +22,20 @@
 	<listener>
 		<listener-class>com.woof.listener.InitializerListener</listener-class>
 	</listener>
+
+	<filter>
+		<filter-name>LoginFilter</filter-name>
+		<filter-class>com.woof.member.filter.LoginFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/member/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+		<dispatcher>ASYNC</dispatcher>
+	</filter-mapping>
 
 
 
