fix photo and add membercenter login

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,8 @@
 		<url-pattern>/groupOrder/check</url-pattern>
 		<url-pattern>/groupOrder/getGroupInfo/*</url-pattern>
 		<url-pattern>/frontend/group/orderPage.jsp</url-pattern>
+		<url-pattern>/frontend/member/login/membercenter.jsp</url-pattern>
+		
 		<dispatcher>REQUEST</dispatcher>
 		<dispatcher>FORWARD</dispatcher>
 		<dispatcher>INCLUDE</dispatcher>
