--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,8 +37,8 @@ spring.datasource.password=password
 # server.port=8080
 
 ###:for Upload capacity limit (default)
-# spring.servlet.multipart.max-file-size=1MB
-# spring.servlet.multipart.max-request-size=10MB
+ spring.servlet.multipart.max-file-size=10MB
+ spring.servlet.multipart.max-request-size=10MB
 # spring.servlet.multipart.file-size-threshold=0MB
 
 ###:In the development process, the cache is usually closed 
