--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,20 @@
 		<dispatcher>ERROR</dispatcher>
 		<dispatcher>ASYNC</dispatcher>
 	</filter-mapping>
-
+<filter>
+		<filter-name>LoginFilter1</filter-name>
+		<filter-class>com.woof.administrator.filter.LoginFilter1</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LoginFilter1</filter-name>
+		<url-pattern>/administrator/*</url-pattern>
+		<url-pattern>/backend/index.html</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+		<dispatcher>ASYNC</dispatcher>
+	</filter-mapping>
 
 
 </web-app>
