--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,7 @@
 		<url-pattern>/frontend/group/orderPage.jsp</url-pattern>
 		<url-pattern>/frontend/member/login/membercenter.jsp</url-pattern>
 		<url-pattern>/frontend/cartlist/checkout.jsp</url-pattern>
+		<url-pattern>/frontend/privatetrainer/buyClass.jsp</url-pattern>
 		<dispatcher>REQUEST</dispatcher>
 		<dispatcher>FORWARD</dispatcher>
 		<dispatcher>INCLUDE</dispatcher>
