--- a/pom.xml
+++ b/pom.xml
@@ -310,6 +310,11 @@
 
 
 
+		<dependency>
+			<groupId>demo</groupId>
+			<artifactId>demo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
