--- a/pom.xml
+++ b/pom.xml
@@ -307,10 +307,13 @@
 			<artifactId>json</artifactId>
 			<version>20231013</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 
 
-
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
